--- a/a4/findCust.html
+++ b/a4/findCust.html
@@ -1,21 +1,19 @@
 
 
 <html>
-<head>
        <title>Another Simple PHP-MySQL Program</title>
 </head>
 
 <body bgcolor="white">
 
-<h3>Connecting to bighitvideo using MySQL/PHP</h3>
+<h3>Connecting to stores7 Database on jnelson@ix.cs.uoregon.edu using MySQL/PHP</h3>
 
 
 
 <hr>
 
 <p>
-Please enter a state name by its code.  The only codes that have
-any data now are ("FL", "LA" and "IL").
+Please enter the name of a manufacturer.
 
 <p>
 
